[tool.poetry]
name = "yaeb"
version = "0.1.2"
description = "A simple typed event bus written in pure python"
authors = ["Daniil Fedyaev <wintercitizen@outlook.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/WinterCitizen/yaeb"
keywords = ["event", "bus", "typed", "eventbus"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
black = "*"
pytest-sugar = "*"
ipdb = "*"
pytest-cov = "*"
wemake-python-styleguide = "*"
pycln = "*"
isort = "*"
add-trailing-comma = "^2.2.3"

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
